--- a/tests/Integration/Behaviour/behat.yml
+++ b/tests/Integration/Behaviour/behat.yml
@@ -22,7 +22,13 @@ default:
                 - Tests\Integration\Behaviour\Features\Context\CommonFeatureContext
                 - Tests\Integration\Behaviour\Features\Context\Domain\StateFeatureContext
                 - Tests\Integration\Behaviour\Features\Context\StateFeatureContext
-        title:
+        tax_rules_group:
+            paths:
+                - "%paths.base%/Features/Scenario/TaxRulesGroup"
+            contexts:
+                - Tests\Integration\Behaviour\Features\Context\CommonFeatureContext
+                - Tests\Integration\Behaviour\Features\Context\Domain\TaxRulesGroupFeatureContext
+                title:
             paths:
                 - "%paths.base%/Features/Scenario/Title"
             contexts:
