--- a/tests/Integration/Behaviour/behat.yml
+++ b/tests/Integration/Behaviour/behat.yml
@@ -233,6 +233,19 @@ default:
                 - Tests\Integration\Behaviour\Features\Transform\CurrencyTransformContext
                 - Tests\Integration\Behaviour\Features\Transform\SharedStorageTransformContext
                 - Tests\Integration\Behaviour\Features\Transform\StringToBoolTransformContext
+        catalog_price_rule:
+          paths:
+            - "%paths.base%/Features/Scenario/CatalogPriceRule"
+          contexts:
+            - Tests\Integration\Behaviour\Features\Context\CommonFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\ShopFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\CurrencyFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\Domain\CatalogPriceRuleContext
+            - Tests\Integration\Behaviour\Features\Transform\SharedStorageTransformContext
+            - Tests\Integration\Behaviour\Features\Transform\StringToBoolTransformContext
+            - Tests\Integration\Behaviour\Features\Context\CountryFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\Domain\CustomerFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\LanguageFeatureContext
         meta:
             paths:
                 - "%paths.base%/Features/Scenario/Meta"
