--- a/src/PrestaShopBundle/Resources/config/services/core/form/command_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/command_builder.yml
@@ -7,21 +7,30 @@ services:
     arguments:
       - !tagged core.product_command_builder
 
+  prestashop.core.form.command_builder.product.update_product_commands_builder:
+    class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\UpdateProductCommandsBuilder
+    tags:
+      - { name: 'core.product_command_builder', priority: 10 }
+    arguments:
+      - !php/const PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension::MODIFY_ALL_SHOPS_PREFIX
+
   # IMPORTANT these two builders update the product indexation, since the indexes are based on other product data
   # like names, references and so on they should be executed last for more up-to-date indexes, this can be done
   # before the product type though as it doesn't influence the indexes
   prestashop.core.form.command_builder.product.options_commands_builder:
     class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\OptionsCommandsBuilder
+    # todo: this and related php classes can be deleted once UpdateProductCommandsBuilder is fully integrated and tested manually
+    # tags:
+      # - { name: 'core.product_command_builder', priority: -15 }
     arguments:
       - !php/const PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension::MODIFY_ALL_SHOPS_PREFIX
-    tags:
-      - { name: 'core.product_command_builder', priority: -15 }
 
   # Status update should be after the visibility as it is the final dependency on the product indexation
   prestashop.core.form.command_builder.product.product_status_commands_builder:
     class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\ProductStatusCommandsBuilder
-    tags:
-      - { name: 'core.product_command_builder', priority: -21 }
+      # todo: this and related php classes can be deleted once UpdateProductCommandsBuilder is fully integrated and tested manually
+      # tags:
+      # - { name: 'core.product_command_builder', priority: -21 }
 
   # VERY IMPORTANT this builder must be the last one, it will avoid conflicts with previous commands
   # that may not be compatible with the updated type, its priority musk be kept lower than others
@@ -32,34 +41,37 @@ services:
 
   prestashop.core.form.command_builder.product.basic_information:
     class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\BasicInformationCommandsBuilder
+    # todo: this and related php classes can be deleted once UpdateProductCommandsBuilder is fully integrated and tested manually
+    # tags: [ 'core.product_command_builder' ]
     arguments:
       - !php/const PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension::MODIFY_ALL_SHOPS_PREFIX
-    tags: [ 'core.product_command_builder' ]
 
   prestashop.core.form.command_builder.product.prices:
     class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\PricesCommandsBuilder
+    # todo: this and related php classes can be deleted once UpdateProductCommandsBuilder is fully integrated and tested manually
+    # tags: [ 'core.product_command_builder' ]
     arguments:
       - !php/const PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension::MODIFY_ALL_SHOPS_PREFIX
-    tags: [ 'core.product_command_builder' ]
 
   prestashop.core.form.command_builder.product.seo:
     class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\SEOCommandsBuilder
+    # todo: this and related php classes can be deleted once UpdateProductCommandsBuilder is fully integrated and tested manually
+    # tags: [ 'core.product_command_builder' ]
     arguments:
       - !php/const PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension::MODIFY_ALL_SHOPS_PREFIX
-    tags: [ 'core.product_command_builder' ]
 
   prestashop.core.form.command_builder.tags.seo:
     class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\TagsCommandsBuilder
-    # @todo: tag commented out until UpdateProductCommand is finished and the SeoCommandsBuilder is removed
-    # tags: [ 'core.product_command_builder' ]
+    tags: [ 'core.product_command_builder' ]
     arguments:
       - !php/const PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension::MODIFY_ALL_SHOPS_PREFIX
 
   prestashop.core.form.command_builder.product.shipping:
     class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\ShippingCommandsBuilder
+    # todo: this and related php classes can be deleted once UpdateProductCommandsBuilder is fully integrated and tested manually
+    # tags: [ 'core.product_command_builder' ]
     arguments:
       - !php/const PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension::MODIFY_ALL_SHOPS_PREFIX
-    tags: [ 'core.product_command_builder' ]
 
   prestashop.core.form.command_builder.product.carriers:
     class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\CarriersCommandsBuilder
@@ -69,9 +81,10 @@ services:
 
   prestashop.core.form.command_builder.product.stock_commands_builder:
     class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\StockCommandsBuilder
+    # todo: this and related php classes can be deleted once UpdateProductCommandsBuilder is fully integrated and tested manually
+    # tags: [ 'core.product_command_builder' ]
     arguments:
       - !php/const PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension::MODIFY_ALL_SHOPS_PREFIX
-    tags: [ 'core.product_command_builder' ]
 
   prestashop.core.form.command_builder.product.product_suppliers_commands_builder:
     class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\ProductSuppliersCommandsBuilder
@@ -95,7 +108,8 @@ services:
 
   prestashop.core.form.command_builder.product.details_commands_builder:
     class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\DetailsCommandsBuilder
-    tags: [ 'core.product_command_builder' ]
+    # todo: this and related php classes can be deleted once UpdateProductCommandsBuilder is fully integrated and tested manually
+    # tags: [ 'core.product_command_builder' ]
 
   prestashop.core.form.command_builder.product.attachments:
     class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\ProductAttachmentsCommandsBuilder
@@ -143,13 +157,6 @@ services:
     class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\Combination\DefaultCombinationCommandsBuilder
     tags: [ 'core.combination_command_builder' ]
 
-  prestashop.core.form.command_builder.product.update_product_commands_builder:
-    class: PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\UpdateProductCommandsBuilder
-    # @todo: tags commented bellow, to avoid affecting product page until all the related commands are refactored.
-    # tags: [ 'core.product_command_builder' ]
-    arguments:
-      - !php/const PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension::MODIFY_ALL_SHOPS_PREFIX
-
   PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\Combination\UpdateCombinationCommandsBuilder: ~
   # @todo: tags commented bellow, to avoid affecting combination page until all the related commands are refactored.
   # tags: [ 'core.combination_command_builder' ]
@@ -157,3 +164,4 @@ services:
   PrestaShop\PrestaShop\Core\Form\IdentifiableObject\CommandBuilder\Product\Combination\UpdateCombinationStockAvailableCommandsBuilder: ~
   # @todo: tags commented bellow, to avoid affecting combination page until all the related commands are refactored.
   # tags: [ 'core.combination_command_builder' ]
+
