Integrate stock information fields into UpdateCombinationCommand

--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_combination.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_combination.yml
@@ -224,3 +224,6 @@ services:
 
   PrestaShop\PrestaShop\Adapter\Product\Combination\Update\Filler\PricesFiller:
     tags: [ 'core.combination_filler' ]
+
+  PrestaShop\PrestaShop\Adapter\Product\Combination\Update\Filler\StockInformationFiller:
+    tags: [ 'core.combination_filler' ]
