--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -1299,9 +1299,10 @@ services:
 
   form.type.order_return:
     class: 'PrestaShopBundle\Form\Admin\Sell\CustomerService\MerchandiseReturn\OrderReturnType'
+    parent: 'form.type.translatable.aware'
+    public: true
     arguments:
       - '@=service("prestashop.adapter.form.choice_provider.order_return_state").getChoices()'
-      - '@translator'
     tags:
       - { name: form.type }
 
